--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<img  class="moviePic" src="https://tse1.mm.bing.net/th?id=OIP.TNBGOIGcAtoXZmEdsjojCgHaK-&pid=Api&rs=1&c=1&qlt=95&w=75&h=111" alt="img">
+	<p class="movieDetail">descriotiobn of mobie sdfasd das ad asd asd as cdcas  cda scd asd as dasd as da sd asd as d ascd asdcd  a nice movie.</p>
+	</div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
